2007-03-24  Stephen J. Turnbull  <stephen@xemacs.org>

	* etags.c: Sync to pot_etags_version 17.26.

2006-11-24  Benson Margulies  <benson@dchbk.us>

	* make-mswin-unicode.pl: allow for lower case header file names in
	the current platform SDK.

2006-08-11  Jerry James  <james@xemacs.org>

	* pop.h: Sync with Emacs.
	* pop.c: Ditto.

2006-08-08  Jerry James  <james@xemacs.org>

	* gnuslib.c (disconnect_from_server): shutdown() has been fine on
	Linux for a long time now; use it.  Also, don't use length to
	access the buffer unless it is positive, not just nonzero.
	* gnuclient.c (filename_expand): Initialize the last array element
	to get a valid C string in case of overflow.  Use strncat to avoid
	buffer overruns.
	* gnuclient.c (main): Use strncpy to avoid buffer overruns.

2006-07-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* etags.c: Xemacs -> XEmacs.

2006-07-19  Stephen J. Turnbull  <stephen@xemacs.org>

	* etags.c: Sync to pot_etags_version 17.19.

2006-07-07  Jerry James  <james@xemacs.org>

	* config.values.in: Regenerate.

2006-05-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.27 "fiddleheads" is released.

2006-04-29  Aidan Kehoe  <kehoea@parhasard.net>

	* make-docfile.c:
	* make-docfile.c (put_filename):
	* make-docfile.c (scan_c_file):
	* make-docfile.c (scan_lisp_file):
	Record file name information for built-in symbols. Based on the
	FSF's implementation of same. 
	
2006-03-31  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.26 "endive" is released.

2006-02-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.25 "eggplant" is released.

2005-12-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.24 "dandelion" is released.

2005-11-22  Malcolm Purvis  <malcolmp@xemacs.org>

	* etags.c: Update to author version 17.15.

2005-11-22  Ben Wing  <ben@xemacs.org>

	* Makefile.in.in:
	Ignore errors from rm during clean.

2005-11-13  Ben Wing  <ben@xemacs.org>

	* Makefile.in.in: