@@ -1,5 +1,12 @@
 2007-03-24  Stephen J. Turnbull  <stephen@xemacs.org>
 
+	* etags.c (print_version): More precise version info.  Suggested
+	by Steve Youngs.
+	(print_help): Use #ifdef; PRINT_UNDOCUMENTED_OPTIONS_HELP may be
+	undefined.
+
+2007-03-24  Stephen J. Turnbull  <stephen@xemacs.org>
+
 	* etags.c: Sync to pot_etags_version 17.26.
 
 2006-11-24  Benson Margulies  <benson@dchbk.us>
